fix collapse transition

--- a/src/styles/component/collapse/style/_module.scss
+++ b/src/styles/component/collapse/style/_module.scss
@@ -8,7 +8,7 @@
 
   &--content {
     transform: translateY(-100%);
-    transition: 200ms ease-in-out;
+    transition: 0.3s ease;
   }
 
   &--content-expanded {
